--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CURRENT PLAYER"
+        android:text="CURRENT PLAYER IS X"
         android:id="@+id/currentTV"
         android:textSize="20dip"
         android:textColor="@color/black"
@@ -37,23 +37,13 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="31dip" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="X"
-        android:id="@+id/playerTV"
-        android:textSize="30dip"
-        android:textColor="@color/black"
-        android:layout_below="@+id/currentTV"
-        android:layout_centerHorizontal="true" />
-
     <TableLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tableLayout"
         android:background="@color/black"
         android:layout_centerVertical="true"
-        android:layout_alignEnd="@+id/textView">
+        android:layout_centerHorizontal="true">
 
         <TableRow
             android:layout_width="match_parent"
@@ -63,25 +53,33 @@
                 android:id="@+id/button1"
                 android:layout_column="0"
                 android:background="@color/white"
-                android:textSize="40dip" />
+                android:textSize="40dip"
+                android:minWidth="80dip"
+                android:minHeight="80dip"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent" />
 
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
                 android:id="@+id/button2"
                 android:layout_column="1"
                 android:background="@color/white"
                 android:layout_marginLeft="2dip"
-                android:textSize="40dip" />
+                android:textSize="40dip"
+                android:minWidth="80dip"
+                android:minHeight="80dip" />
 
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
                 android:id="@+id/button3"
                 android:layout_column="2"
                 android:background="@color/white"
                 android:layout_marginLeft="2dip"
-                android:textSize="40dip" />
+                android:textSize="40dip"
+                android:minWidth="80dip"
+                android:minHeight="80dip" />
         </TableRow>
 
         <TableRow
@@ -93,27 +91,35 @@
                 android:layout_column="0"
                 android:background="@color/white"
                 android:layout_marginTop="2dip"
-                android:textSize="40dip" />
+                android:textSize="40dip"
+                android:minHeight="80dip"
+                android:minWidth="80dip"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent" />
 
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
                 android:id="@+id/button5"
                 android:layout_column="1"
                 android:background="@color/white"
                 android:layout_marginTop="2dip"
                 android:layout_marginLeft="2dip"
-                android:textSize="40dip" />
+                android:textSize="40dip"
+                android:minWidth="80dip"
+                android:minHeight="80dip" />
 
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
                 android:id="@+id/button6"
                 android:layout_column="2"
                 android:background="@color/white"
                 android:layout_marginTop="2dip"
                 android:layout_marginLeft="2dip"
-                android:textSize="40dip" />
+                android:textSize="40dip"
+                android:minHeight="80dip"
+                android:minWidth="80dip" />
         </TableRow>
 
         <TableRow
@@ -125,27 +131,35 @@
                 android:layout_column="0"
                 android:background="@color/white"
                 android:layout_marginTop="2dip"
-                android:textSize="40dip" />
+                android:textSize="40dip"
+                android:minWidth="80dip"
+                android:minHeight="80dip"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent" />
 
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
                 android:id="@+id/button8"
                 android:layout_column="1"
                 android:background="@color/white"
                 android:layout_marginTop="2dip"
                 android:layout_marginLeft="2dip"
-                android:textSize="40dip" />
+                android:textSize="40dip"
+                android:minHeight="80dip"
+                android:minWidth="80dip" />
 
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
                 android:id="@+id/button9"
                 android:layout_column="2"
                 android:background="@color/white"
                 android:layout_marginTop="2dip"
                 android:layout_marginLeft="2dip"
-                android:textSize="40dip" />
+                android:textSize="40dip"
+                android:minWidth="80dip"
+                android:minHeight="80dip" />
         </TableRow>
     </TableLayout>
 
