--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,10 +54,11 @@
                 android:layout_column="0"
                 android:background="@color/white"
                 android:textSize="40dip"
-                android:minWidth="80dip"
-                android:minHeight="80dip"
+                android:minWidth="85dip"
+                android:minHeight="85dip"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent" />
+                android:layout_height="fill_parent"
+                android:maxWidth="85dip" />
 
             <Button
                 android:layout_width="fill_parent"
@@ -67,8 +68,9 @@
                 android:background="@color/white"
                 android:layout_marginLeft="2dip"
                 android:textSize="40dip"
-                android:minWidth="80dip"
-                android:minHeight="80dip" />
+                android:minWidth="85dip"
+                android:minHeight="85dip"
+                android:maxWidth="85dip" />
 
             <Button
                 android:layout_width="fill_parent"
@@ -78,8 +80,9 @@
                 android:background="@color/white"
                 android:layout_marginLeft="2dip"
                 android:textSize="40dip"
-                android:minWidth="80dip"
-                android:minHeight="80dip" />
+                android:minWidth="85dip"
+                android:minHeight="85dip"
+                android:maxWidth="85dip" />
         </TableRow>
 
         <TableRow
@@ -92,10 +95,11 @@
                 android:background="@color/white"
                 android:layout_marginTop="2dip"
                 android:textSize="40dip"
-                android:minHeight="80dip"
-                android:minWidth="80dip"
+                android:minWidth="85dip"
+                android:minHeight="85dip"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent" />
+                android:layout_height="fill_parent"
+                android:maxWidth="85dip" />
 
             <Button
                 android:layout_width="fill_parent"
@@ -106,8 +110,9 @@
                 android:layout_marginTop="2dip"
                 android:layout_marginLeft="2dip"
                 android:textSize="40dip"
-                android:minWidth="80dip"
-                android:minHeight="80dip" />
+                android:minWidth="85dip"
+                android:minHeight="85dip"
+                android:maxWidth="85dip" />
 
             <Button
                 android:layout_width="fill_parent"
@@ -118,8 +123,9 @@
                 android:layout_marginTop="2dip"
                 android:layout_marginLeft="2dip"
                 android:textSize="40dip"
-                android:minHeight="80dip"
-                android:minWidth="80dip" />
+                android:minWidth="85dip"
+                android:minHeight="85dip"
+                android:maxWidth="85dip" />
         </TableRow>
 
         <TableRow
@@ -132,10 +138,11 @@
                 android:background="@color/white"
                 android:layout_marginTop="2dip"
                 android:textSize="40dip"
-                android:minWidth="80dip"
-                android:minHeight="80dip"
+                android:minWidth="85dip"
+                android:minHeight="85dip"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent" />
+                android:layout_height="fill_parent"
+                android:maxWidth="85dip" />
 
             <Button
                 android:layout_width="fill_parent"
@@ -146,8 +153,9 @@
                 android:layout_marginTop="2dip"
                 android:layout_marginLeft="2dip"
                 android:textSize="40dip"
-                android:minHeight="80dip"
-                android:minWidth="80dip" />
+                android:minWidth="85dip"
+                android:minHeight="85dip"
+                android:maxWidth="85dip" />
 
             <Button
                 android:layout_width="fill_parent"
@@ -158,8 +166,9 @@
                 android:layout_marginTop="2dip"
                 android:layout_marginLeft="2dip"
                 android:textSize="40dip"
-                android:minWidth="80dip"
-                android:minHeight="80dip" />
+                android:minWidth="85dip"
+                android:minHeight="85dip"
+                android:maxWidth="85dip" />
         </TableRow>
     </TableLayout>
 
@@ -169,42 +178,53 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tableLayout"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp">
+        android:layout_marginTop="35dip"
+        android:background="@color/black">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Text"
-            android:id="@+id/textView2" />
+            android:text="X : 0"
+            android:id="@+id/xScoreTV"
+            android:textSize="30dip"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:textAlignment="center"
+            android:background="@color/white"
+            android:layout_marginRight="1dip"
+            android:paddingRight="35dip"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Text"
-            android:id="@+id/textView3" />
+            android:text="O : 0"
+            android:id="@+id/oScoreTV"
+            android:textSize="30dip"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:textAlignment="center"
+            android:background="@color/white"
+            android:layout_marginLeft="1dip"
+            android:paddingLeft="35dip"/>
     </LinearLayout>
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="110dip"
         android:layout_height="wrap_content"
-        android:text="Reset Turn"
+        android:text="New Turn"
         android:id="@+id/buttonResetTurn"
         android:background="@color/lightGray"
         android:textColor="@color/black"
-        android:paddingLeft="10dip"
-        android:paddingRight="10dip"
         android:layout_alignTop="@+id/buttonResetGame"
         android:layout_alignStart="@+id/tableLayout" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="110dip"
         android:layout_height="wrap_content"
         android:text="Reset Game"
         android:id="@+id/buttonResetGame"
         android:background="@color/lightGray"
         android:textColor="@color/black"
-        android:paddingLeft="10dip"
-        android:paddingRight="10dip"
         android:layout_alignParentBottom="true"
         android:layout_alignEnd="@+id/tableLayout" />
 
